tailwind config updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="/dist/main.css" rel="stylesheet" />
     <title>Multiwoven</title>
   </head>
   <body>
