VITE_API_HOST ENV access FIX

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,5 +15,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      window.VITE_API_HOST = "__VITE_API_HOST__";
+    </script>    
   </body>
 </html>
