chore: update brand theme and copyright (#2)

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
     rel="stylesheet" />
-  <link rel="icon" type="image/png" href="/favicon.ico" />
-  <title>Multiwoven</title>
+  <link id="favicon" rel="icon" type="image/png" href="/favicon.ico" />
+  <title>AI Squared</title>
 </head>
 
 <body>
