fix: importing envs

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,10 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script src="/env.js"></script>
+  <script>
+    // envs will be dynamically updated when the multiwoven server runs
+    window.VITE_API_HOST = '__VITE_API_HOST__';
+  </script>
 </body>
 
 </html>
