chore: load env variables before application loads (#25)

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,29 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link id="favicon" rel="icon" type="image/png" href="/favicon.ico" />
-    <title>AI Squared</title>
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script>
-      // envs will be dynamically updated when the multiwoven server runs
-      window.VITE_API_HOST = '__VITE_API_HOST__';
-      window.VITE_BRAND_COLOR = '__VITE_BRAND_COLOR__';
-      window.VITE_BRAND_HOVER_COLOR = '__VITE_BRAND_HOVER_COLOR__';
-      window.VITE_BRAND_NAME = '__VITE_BRAND_NAME__';
-      window.VITE_LOGO_URL = '__VITE_LOGO_URL__';
-      window.VITE_FAV_ICON_URL = '__VITE_FAV_ICON_URL__';
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+  <link id="favicon" rel="icon" type="image/png" href="/favicon.ico" />
+  <title>AI Squared</title>
+  <script async>
+    // envs will be dynamically updated when the server runs
+    window.VITE_API_HOST = '__VITE_API_HOST__';
+    window.VITE_BRAND_COLOR = '__VITE_BRAND_COLOR__';
+    window.VITE_BRAND_HOVER_COLOR = '__VITE_BRAND_HOVER_COLOR__';
+    window.VITE_BRAND_NAME = '__VITE_BRAND_NAME__';
+    window.VITE_LOGO_URL = '__VITE_LOGO_URL__';
+    window.VITE_FAV_ICON_URL = '__VITE_FAV_ICON_URL__';
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+
+</body>
+
 </html>
